...
  await FirebaseMessaging.instance.requestPermission();
  await updateAppUser();

  runApp(
    MaterialApp(
      debugShowCheckedModeBanner: false,
      title: 'Hedieaty',
      initialRoute: '/sign_in',
      routes: {
        '/home': (context) => HomePage(key: Key('homePage')),
        '/sign_in': (context) => Sign_in(),
        '/sign_up': (context) => Sign_up(),
        '/eventList': (context) => EventListPage(),
        '/giftList': (context) => GiftListPage(
              eventId: 'id',
            ),
...
    String selectedGender = 'male';
    final genderOptions = ['male', 'female'];

    showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: Text("Add Friend"),
        content: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            TextField(
              controller: nameController,
              decoration: InputDecoration(labelText: "Name"),
            ),
            TextField(
              controller: phoneController,
              decoration: InputDecoration(labelText: "Phone Number"),
              keyboardType: TextInputType.phone,
            ),
            TextField(
              controller: emailController,
              decoration: InputDecoration(labelText: "Friend's Email"),
            ),
            SizedBox(height: 16),
            DropdownButton<String>(
              value: selectedGender,
              items: genderOptions.map((String gender) {
                return DropdownMenuItem<String>(
...
        actions: [
          TextButton(
            child: Text("Cancel"),
            onPressed: () => Navigator.pop(context),
          ),
          ElevatedButton(
            child: Text("Add"),
            onPressed: () async {
              final email = emailController.text.trim();
              final name = nameController.text.trim();
              final phone = phoneController.text.trim();

              if (name.isEmpty) {
...
          PopupMenuButton<String>(
            color: Color(0XFF996CF3),
            onSelected: (String route) => Navigator.pushNamed(context, route),
            itemBuilder: (context) => [
              _buildMenuItem('Home', '/'),
              _buildMenuItem('Event List', '/eventList'),
              _buildMenuItem('Profile', '/profile'),
              _buildMenuItem('My Pledged Gifts', '/pledgedGifts'),
            ],
          ),
        ],
      ),

...
                  context,
                  MaterialPageRoute(
                    builder: (context) => EventListPage(),
                  ),
                );
              },
              child: Text("Create Your Own Event/List"),
            ),
          ),

          Expanded(
            child: friends.isEmpty
                ? Center(
...
                    width: 350,
                    height: 350,
                    fit: BoxFit.contain,
                  ),
                  const SizedBox(height: 20),
                  const Text(
                    "No friends found. Add a friend to get started!",
                    style:
                    TextStyle(fontSize: 16, color: Colors.grey),
                  ),
                ],
              ),
              ),
...
              title: Text("Add Friend"),
              content: Column(
                mainAxisSize: MainAxisSize.min,
                children: [
                  ListTile(
                    leading: Icon(Icons.phone),
                    title: Text("Add Manually"),
                    onTap: () {
                      Navigator.pop(context);
                      _showManualAddDialog();
                    },
                  ),
                  ListTile(
                    leading: Icon(Icons.contacts),
                    title: Text("Select from Contacts"),
                    onTap: () {
                      Navigator.pop(context);
                      _selectContactFromList();
                    },
                  ),
                ],
...
