...
                    setState(() {
                      isPledged = value;
                    });
                  }
                      : null,
                ),
                Text(isPledged ? 'Pledged' : 'Available'),
              ],
            ),
            SizedBox(height: 20),

            ElevatedButton(
              onPressed: _saveGift,
...
