...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              const Padding(
                padding: EdgeInsets.all(30),
                child: Text(
                  'Welcome to Hedieatak',
                  style: TextStyle(
                      fontSize: 35,
                      color: Color(0XFF996CF3),
                      fontWeight: FontWeight.bold),
                ),
              ),
...
                        ),
                        TextButton(
                            onPressed: () {
                              Navigator.pushNamed(context, '/sign_up');
                            },
                            child: const Text(
                              "Sign up",
                              style: TextStyle(
                                  color: Color(0XFF996CF3),
                                  fontStyle: FontStyle.italic),
                            )),
                      ],
                    )
...
