// import 'package:flutter/material.dart';
// import '../models/user_model.dart';
//
// class UserProvider with ChangeNotifier {
//   UserOne _user = UserOne(name: 'John Doe', email: 'john@example.com');
//
//   UserOne get user => _user;
//
//   void updateUser(String name, String email, bool notificationsEnabled) {
//     _user = UserOne(name: name, email: email, notificationsEnabled: notificationsEnabled);
//     notifyListeners();
//   }
// }
//
//
//
//
//
//
